fixed overflow problems at popup add and edit contact slide animation and responsic smartphone view for contact info

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .contacts {
     position: fixed;
     width: 456px;
